--- a/index.html
+++ b/index.html
@@ -37,27 +37,13 @@
 
 <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js"></script>
 
-<script>
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  var firebaseConfig = {
-    apiKey: "AIzaSyCa6zBtipVfaQDQQsspFN723yMWgSKWSPg",
-    authDomain: "srit-pros-contest.firebaseapp.com",
-    projectId: "srit-pros-contest",
-    storageBucket: "srit-pros-contest.appspot.com",
-    messagingSenderId: "1025128489593",
-    appId: "1:1025128489593:web:a386549ba8f46955afaaa8",
-    measurementId: "G-42N2X8XVT1"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
+<script src="details.js">
 </script>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '3140669704';
+    var serviceWorkerVersion = '1827163527';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
