--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     For more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="/srit_pros_contest_web_app/">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -37,13 +37,14 @@
 
 <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js"></script>
 
-<script src="details.js">
+<script>
+  var _0x2355=['1fVOiDJ','613203TfDhAz','154988peSkvt','620199QUhYBL','297322eXpAwZ','initializeApp','499dnUYdp','srit-pros-contest.firebaseapp.com','1025128489593','G-42N2X8XVT1','608966MrFJzS','530852SmaSUf','srit-pros-contest.appspot.com','758SbslGY','analytics','1:1025128489593:web:a386549ba8f46955afaaa8'];var _0x1a8a46=_0x28e1;function _0x28e1(_0x508316,_0x592845){_0x508316=_0x508316-0xdc;var _0x235561=_0x2355[_0x508316];return _0x235561;}(function(_0x3f9804,_0x47b979){var _0x8c650=_0x28e1;while(!![]){try{var _0xd8fd8c=-parseInt(_0x8c650(0xe9))+-parseInt(_0x8c650(0xdf))+parseInt(_0x8c650(0xe7))+parseInt(_0x8c650(0xe6))+-parseInt(_0x8c650(0xe5))*-parseInt(_0x8c650(0xe8))+parseInt(_0x8c650(0xe2))*parseInt(_0x8c650(0xeb))+-parseInt(_0x8c650(0xe0));if(_0xd8fd8c===_0x47b979)break;else _0x3f9804['push'](_0x3f9804['shift']());}catch(_0x993867){_0x3f9804['push'](_0x3f9804['shift']());}}}(_0x2355,0x50714));var firebaseConfig={'apiKey':'AIzaSyCa6zBtipVfaQDQQsspFN723yMWgSKWSPg','authDomain':_0x1a8a46(0xdc),'projectId':'srit-pros-contest','storageBucket':_0x1a8a46(0xe1),'messagingSenderId':_0x1a8a46(0xdd),'appId':_0x1a8a46(0xe4),'measurementId':_0x1a8a46(0xde)};firebase[_0x1a8a46(0xea)](firebaseConfig),firebase[_0x1a8a46(0xe3)]();
 </script>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '1827163527';
+    var serviceWorkerVersion = '2315263709';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
