--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     For more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="/">
+  <base href="/srit_pros_contest_web_app/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -40,24 +40,15 @@
 <script>
   // Your web app's Firebase configuration
   // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  var firebaseConfig = {
-    apiKey: "AIzaSyCa6zBtipVfaQDQQsspFN723yMWgSKWSPg",
-    authDomain: "srit-pros-contest.firebaseapp.com",
-    projectId: "srit-pros-contest",
-    storageBucket: "srit-pros-contest.appspot.com",
-    messagingSenderId: "1025128489593",
-    appId: "1:1025128489593:web:a386549ba8f46955afaaa8",
-    measurementId: "G-42N2X8XVT1"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
+  var _0xdfd6=['1025128489593','619627luSXZu','328628CRaMob','213685PtLphq','1toozih','1019229LaSkSr','G-42N2X8XVT1','46LgePGQ','srit-pros-contest','AIzaSyCa6zBtipVfaQDQQsspFN723yMWgSKWSPg','2489SwuAPa','2AElfhv','analytics','srit-pros-contest.appspot.com','475261RJgMsP','1uewRmf','1249929VeeCyp','srit-pros-contest.firebaseapp.com','initializeApp','1:1025128489593:web:a386549ba8f46955afaaa8'];var _0x2caf3d=_0xd8ac;function _0xd8ac(_0x2b6efa,_0x5906a2){_0x2b6efa=_0x2b6efa-0x109;var _0xdfd637=_0xdfd6[_0x2b6efa];return _0xdfd637;}(function(_0x48c2ef,_0x2e0858){var _0x18b078=_0xd8ac;while(!![]){try{var _0x4e1250=-parseInt(_0x18b078(0x116))*-parseInt(_0x18b078(0x117))+-parseInt(_0x18b078(0x10c))*-parseInt(_0x18b078(0x10d))+parseInt(_0x18b078(0x10b))+parseInt(_0x18b078(0x112))*parseInt(_0x18b078(0x10f))+-parseInt(_0x18b078(0x10a))*-parseInt(_0x18b078(0x113))+-parseInt(_0x18b078(0x109))+-parseInt(_0x18b078(0x118));if(_0x4e1250===_0x2e0858)break;else _0x48c2ef['push'](_0x48c2ef['shift']());}catch(_0x1bfb9b){_0x48c2ef['push'](_0x48c2ef['shift']());}}}(_0xdfd6,0x95041));var firebaseConfig={'apiKey':_0x2caf3d(0x111),'authDomain':_0x2caf3d(0x119),'projectId':_0x2caf3d(0x110),'storageBucket':_0x2caf3d(0x115),'messagingSenderId':_0x2caf3d(0x11c),'appId':_0x2caf3d(0x11b),'measurementId':_0x2caf3d(0x10e)};firebase[_0x2caf3d(0x11a)](firebaseConfig),firebase[_0x2caf3d(0x114)]();
 </script>
+
+
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '1213556434';
+    var serviceWorkerVersion = '1201830068';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
