--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     For more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NPKMY3H6R7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NPKMY3H6R7');
+</script>
   <base href="/">
 
   <meta charset="UTF-8">
@@ -48,7 +57,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '3754809851';
+    var serviceWorkerVersion = '2212343857';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
