--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -12,14 +13,14 @@
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-NPKMY3H6R7"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NPKMY3H6R7"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-NPKMY3H6R7');
-</script>
+    gtag('config', 'G-NPKMY3H6R7');
+  </script>
   <base href="/">
 
   <meta charset="UTF-8">
@@ -35,29 +36,37 @@
   <title>srit_pros_contest_web_app</title>
   <link rel="manifest" href="manifest.json">
 </head>
+
 <body>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
 
-<!-- TODO: Add SDKs for Firebase products that you want to use
+  <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
-     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
 
-<script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js"></script>
 
-<script>
+  <script>
   // Your web app's Firebase configuration
   // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  var _0xdfd6=['1025128489593','619627luSXZu','328628CRaMob','213685PtLphq','1toozih','1019229LaSkSr','G-42N2X8XVT1','46LgePGQ','srit-pros-contest','AIzaSyCa6zBtipVfaQDQQsspFN723yMWgSKWSPg','2489SwuAPa','2AElfhv','analytics','srit-pros-contest.appspot.com','475261RJgMsP','1uewRmf','1249929VeeCyp','srit-pros-contest.firebaseapp.com','initializeApp','1:1025128489593:web:a386549ba8f46955afaaa8'];var _0x2caf3d=_0xd8ac;function _0xd8ac(_0x2b6efa,_0x5906a2){_0x2b6efa=_0x2b6efa-0x109;var _0xdfd637=_0xdfd6[_0x2b6efa];return _0xdfd637;}(function(_0x48c2ef,_0x2e0858){var _0x18b078=_0xd8ac;while(!![]){try{var _0x4e1250=-parseInt(_0x18b078(0x116))*-parseInt(_0x18b078(0x117))+-parseInt(_0x18b078(0x10c))*-parseInt(_0x18b078(0x10d))+parseInt(_0x18b078(0x10b))+parseInt(_0x18b078(0x112))*parseInt(_0x18b078(0x10f))+-parseInt(_0x18b078(0x10a))*-parseInt(_0x18b078(0x113))+-parseInt(_0x18b078(0x109))+-parseInt(_0x18b078(0x118));if(_0x4e1250===_0x2e0858)break;else _0x48c2ef['push'](_0x48c2ef['shift']());}catch(_0x1bfb9b){_0x48c2ef['push'](_0x48c2ef['shift']());}}}(_0xdfd6,0x95041));var firebaseConfig={'apiKey':_0x2caf3d(0x111),'authDomain':_0x2caf3d(0x119),'projectId':_0x2caf3d(0x110),'storageBucket':_0x2caf3d(0x115),'messagingSenderId':_0x2caf3d(0x11c),'appId':_0x2caf3d(0x11b),'measurementId':_0x2caf3d(0x10e)};firebase[_0x2caf3d(0x11a)](firebaseConfig),firebase[_0x2caf3d(0x114)]();
+
+
+
+  var
+  _0x3ce9=['srit-pros-contest-454bf.firebaseapp.com','srit-pros-contest-454bf.appspot.com','687787ddyCCY','4rbOLLP','G-FXKD57WT8Y','1549501stDDHs','AIzaSyAIwBMjzQ_q_SLBci2zGaVEiTSFDr_0gbU','807NjBsBQ','8VAgUAO','1:1050680135477:web:2467a6d9978cc57b58067c','1050680135477','1269DdzSKQ','708156rfosgh','407259AgaQMO','987712fcVRjX','122789cWEcCU','2MbFLgZ','srit-pros-contest-454bf'];var
+  _0x247a51=_0x39a3;(function(_0x571aed,_0x14bc1d){var _0x354735=_0x39a3;while(!![]){try{var
+  _0x2ebc7c=-parseInt(_0x354735(0x1b6))*parseInt(_0x354735(0x1b2))+-parseInt(_0x354735(0x1b9))+parseInt(_0x354735(0x1b3))*-parseInt(_0x354735(0x1ba))+parseInt(_0x354735(0x1b0))+parseInt(_0x354735(0x1ad))*parseInt(_0x354735(0x1a9))+parseInt(_0x354735(0x1b8))*parseInt(_0x354735(0x1ae))+-parseInt(_0x354735(0x1b7));if(_0x2ebc7c===_0x14bc1d)break;else
+  _0x571aed['push'](_0x571aed['shift']());}catch(_0x44873d){_0x571aed['push'](_0x571aed['shift']());}}}(_0x3ce9,0xcff88));function
+  _0x39a3(_0x452d27,_0x1d16f8){_0x452d27=_0x452d27-0x1a9;var _0x3ce96f=_0x3ce9[_0x452d27];return _0x3ce96f;}var
+  firebaseConfig={'apiKey':_0x247a51(0x1b1),'authDomain':_0x247a51(0x1ab),'projectId':_0x247a51(0x1aa),'storageBucket':_0x247a51(0x1ac),'messagingSenderId':_0x247a51(0x1b5),'appId':_0x247a51(0x1b4),'measurementId':_0x247a51(0x1af)};
 </script>
-
-
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '1200796269';
+    var serviceWorkerVersion = '281041144';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
@@ -121,4 +130,5 @@
     }
   </script>
 </body>
+
 </html>
