--- a/index.html
+++ b/index.html
@@ -49,24 +49,19 @@
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js"></script>
 
   <script>
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+
+    var _0x4ba6 = ['1050680135477', 'initializeApp', '1002869bmdkpD', '97140JFooqV', '1557141FqlyzD', 'analytics', 'srit-pros-contest-454bf.appspot.com', '205649KEoRCN', '903118XBbvGf', '4cEYZdx', '1:1050680135477:web:2467a6d9978cc57b58067c', '1315123LlPzpz', '1112864YnniwH', 'AIzaSyAIwBMjzQ_q_SLBci2zGaVEiTSFDr_0gbU', 'srit-pros-contest-454bf']; var _0x55f977 = _0xc41a; (function (_0x50a4a7, _0x57ab51) { var _0x449d6f = _0xc41a; while (!![]) { try { var _0x4c74dd = -parseInt(_0x449d6f(0x19e)) + -parseInt(_0x449d6f(0x1a1)) + -parseInt(_0x449d6f(0x19d)) * parseInt(_0x449d6f(0x19f)) + parseInt(_0x449d6f(0x1a8)) + parseInt(_0x449d6f(0x1a7)) + parseInt(_0x449d6f(0x1a2)) + parseInt(_0x449d6f(0x1a9)); if (_0x4c74dd === _0x57ab51) break; else _0x50a4a7['push'](_0x50a4a7['shift']()); } catch (_0x1b6b3e) { _0x50a4a7['push'](_0x50a4a7['shift']()); } } }(_0x4ba6, 0xb2059)); function _0xc41a(_0x3777b8, _0x13eaca) { _0x3777b8 = _0x3777b8 - 0x19d; var _0x4ba655 = _0x4ba6[_0x3777b8]; return _0x4ba655; } var firebaseConfig = { 'apiKey': _0x55f977(0x1a3), 'authDomain': 'srit-pros-contest-454bf.firebaseapp.com', 'projectId': _0x55f977(0x1a4), 'storageBucket': _0x55f977(0x1ab), 'messagingSenderId': _0x55f977(0x1a5), 'appId': _0x55f977(0x1a0), 'measurementId': 'G-FXKD57WT8Y' }; firebase[_0x55f977(0x1a6)](firebaseConfig), firebase[_0x55f977(0x1aa)]();
 
 
 
-  var
-  _0x3ce9=['srit-pros-contest-454bf.firebaseapp.com','srit-pros-contest-454bf.appspot.com','687787ddyCCY','4rbOLLP','G-FXKD57WT8Y','1549501stDDHs','AIzaSyAIwBMjzQ_q_SLBci2zGaVEiTSFDr_0gbU','807NjBsBQ','8VAgUAO','1:1050680135477:web:2467a6d9978cc57b58067c','1050680135477','1269DdzSKQ','708156rfosgh','407259AgaQMO','987712fcVRjX','122789cWEcCU','2MbFLgZ','srit-pros-contest-454bf'];var
-  _0x247a51=_0x39a3;(function(_0x571aed,_0x14bc1d){var _0x354735=_0x39a3;while(!![]){try{var
-  _0x2ebc7c=-parseInt(_0x354735(0x1b6))*parseInt(_0x354735(0x1b2))+-parseInt(_0x354735(0x1b9))+parseInt(_0x354735(0x1b3))*-parseInt(_0x354735(0x1ba))+parseInt(_0x354735(0x1b0))+parseInt(_0x354735(0x1ad))*parseInt(_0x354735(0x1a9))+parseInt(_0x354735(0x1b8))*parseInt(_0x354735(0x1ae))+-parseInt(_0x354735(0x1b7));if(_0x2ebc7c===_0x14bc1d)break;else
-  _0x571aed['push'](_0x571aed['shift']());}catch(_0x44873d){_0x571aed['push'](_0x571aed['shift']());}}}(_0x3ce9,0xcff88));function
-  _0x39a3(_0x452d27,_0x1d16f8){_0x452d27=_0x452d27-0x1a9;var _0x3ce96f=_0x3ce9[_0x452d27];return _0x3ce96f;}var
-  firebaseConfig={'apiKey':_0x247a51(0x1b1),'authDomain':_0x247a51(0x1ab),'projectId':_0x247a51(0x1aa),'storageBucket':_0x247a51(0x1ac),'messagingSenderId':_0x247a51(0x1b5),'appId':_0x247a51(0x1b4),'measurementId':_0x247a51(0x1af)};
-</script>
+  </script>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '281041144';
+    var serviceWorkerVersion = '3199263298';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
