--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <meta name="apple-mobile-web-app-title" content="srit_pros_contest_web_app">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>srit_pros_contest_web_app</title>
+  <title>srit_virtual_expo_web_app</title>
   <link rel="manifest" href="manifest.json">
 </head>
 
@@ -52,8 +52,7 @@
     // Your web app's Firebase configuration
     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
 
-    var _0x4ba6 = ['1050680135477', 'initializeApp', '1002869bmdkpD', '97140JFooqV', '1557141FqlyzD', 'analytics', 'srit-pros-contest-454bf.appspot.com', '205649KEoRCN', '903118XBbvGf', '4cEYZdx', '1:1050680135477:web:2467a6d9978cc57b58067c', '1315123LlPzpz', '1112864YnniwH', 'AIzaSyAIwBMjzQ_q_SLBci2zGaVEiTSFDr_0gbU', 'srit-pros-contest-454bf']; var _0x55f977 = _0xc41a; (function (_0x50a4a7, _0x57ab51) { var _0x449d6f = _0xc41a; while (!![]) { try { var _0x4c74dd = -parseInt(_0x449d6f(0x19e)) + -parseInt(_0x449d6f(0x1a1)) + -parseInt(_0x449d6f(0x19d)) * parseInt(_0x449d6f(0x19f)) + parseInt(_0x449d6f(0x1a8)) + parseInt(_0x449d6f(0x1a7)) + parseInt(_0x449d6f(0x1a2)) + parseInt(_0x449d6f(0x1a9)); if (_0x4c74dd === _0x57ab51) break; else _0x50a4a7['push'](_0x50a4a7['shift']()); } catch (_0x1b6b3e) { _0x50a4a7['push'](_0x50a4a7['shift']()); } } }(_0x4ba6, 0xb2059)); function _0xc41a(_0x3777b8, _0x13eaca) { _0x3777b8 = _0x3777b8 - 0x19d; var _0x4ba655 = _0x4ba6[_0x3777b8]; return _0x4ba655; } var firebaseConfig = { 'apiKey': _0x55f977(0x1a3), 'authDomain': 'srit-pros-contest-454bf.firebaseapp.com', 'projectId': _0x55f977(0x1a4), 'storageBucket': _0x55f977(0x1ab), 'messagingSenderId': _0x55f977(0x1a5), 'appId': _0x55f977(0x1a0), 'measurementId': 'G-FXKD57WT8Y' }; firebase[_0x55f977(0x1a6)](firebaseConfig), firebase[_0x55f977(0x1aa)]();
-
+    var _0x122b=['3467atvwIw','G-HKF9Z5EPVJ','179171OGRwKp','1FuGwSG','177480CodDQX','initializeApp','178297xBpxlY','48283nvpuEO','AIzaSyCvZTEX_DT9js5jBkGKUqLC8Kbm2vn3Op0','srit-virtual-expo','183919aKBtdW','365816509616','221845VlTAGZ','108MeBmft','srit-virtual-expo.appspot.com','analytics'];var _0x4f4073=_0x3bbb;function _0x3bbb(_0x3d4af7,_0x5ae81f){_0x3d4af7=_0x3d4af7-0x168;var _0x122bab=_0x122b[_0x3d4af7];return _0x122bab;}(function(_0x38c0e0,_0xcd3d26){var _0x1bb9b7=_0x3bbb;while(!![]){try{var _0x17c2b7=parseInt(_0x1bb9b7(0x16b))*parseInt(_0x1bb9b7(0x174))+-parseInt(_0x1bb9b7(0x16e))*-parseInt(_0x1bb9b7(0x171))+parseInt(_0x1bb9b7(0x168))+-parseInt(_0x1bb9b7(0x173))+parseInt(_0x1bb9b7(0x177))+-parseInt(_0x1bb9b7(0x175))+-parseInt(_0x1bb9b7(0x16d));if(_0x17c2b7===_0xcd3d26)break;else _0x38c0e0['push'](_0x38c0e0['shift']());}catch(_0x1513d3){_0x38c0e0['push'](_0x38c0e0['shift']());}}}(_0x122b,0x32667));var firebaseConfig={'apiKey':_0x4f4073(0x169),'authDomain':'srit-virtual-expo.firebaseapp.com','projectId':_0x4f4073(0x16a),'storageBucket':_0x4f4073(0x16f),'messagingSenderId':_0x4f4073(0x16c),'appId':'1:365816509616:web:2875fbee2c992c7d4ff775','measurementId':_0x4f4073(0x172)};firebase[_0x4f4073(0x176)](firebaseConfig),firebase[_0x4f4073(0x170)]();
 
 
   </script>
@@ -61,7 +60,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '2170866892';
+    var serviceWorkerVersion = '556581421';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
